removing unused font libs

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,8 +5,8 @@
 
 //font  //=================================================================
 
-@import './fonts/font-awesome/font-awesome';
-@import './fonts/custom-font/_customfonts';
+// @import './fonts/font-awesome/font-awesome';
+// @import './fonts/custom-font/_customfonts';
 
 //crn SASS =================================================================
 @import './crn_app/variables';
