fixing padding issue on different layouts route-wrapper

--- a/src/sass/crn_app/_elements-wrappers.scss
+++ b/src/sass/crn_app/_elements-wrappers.scss
@@ -101,9 +101,18 @@ h6 {
 }
 
 .route-wrapper {
+    margin-top: 20px;
 
     .inner-route {
         padding: 0 0 20px;
+    }
+}
+
+.is-front,
+.snapshot,
+.dataset {
+    .route-wrapper {
+        margin-top: 0;
     }
 }
 
