--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -236,10 +236,11 @@
                         padding: 10px;
                         display: block;
                         float: left;
-                        width: 200px;
+                        width: auto;
                         text-align: left;
                         margin-left: 40px;
                         line-height: 30px;
+
                         i {
                             font-size: 30px;
                             position: absolute;
@@ -251,7 +252,7 @@
                         @include border-radius (0);
                         text-transform: uppercase;
                         margin: 10px 3px 10px 0;
-                        padding: 8px 10px;
+                        padding: 8px 5px;
                         font-size: 14px;
 
                         &.text-warning {
@@ -462,7 +463,7 @@
                         padding: 10px;
                         display: block;
                         float: left;
-                        width: 200px;
+                        width: auto;
                         text-align: left;
                         margin-left: 40px;
                         line-height: 30px;
