--- a/src/sass/crn_app/_dataset.tools.scss
+++ b/src/sass/crn_app/_dataset.tools.scss
@@ -9,11 +9,11 @@
 
     .tools {
         padding: 0;
-        margin: 0;
+        margin: 0 0 0 40px;
         display: block;
         width: 100%;
         background: $f4;
-        border-bottom: 1px solid $ddd;
+        position: fixed;
 
         .run-analysis {
             height: 45px;
