Updates to allow usermenu to work with react-bootstrap updates

--- a/src/sass/crn_app/_nav.navbar.scss
+++ b/src/sass/crn_app/_nav.navbar.scss
@@ -153,10 +153,10 @@
             }
 
 
-            .user-menu {
+            .dropdown {
                 position: initial;
 
-                &.btn-null {
+                &.btn-group {
                     .btn {
                         background: $transparent;
                         box-shadow: none;
