Added danger text color to failed job statuses

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -79,6 +79,10 @@
                 .finished .badge {
                     color: $brand-success;
                 }
+
+                .failed .badge {
+                    color: $brand-danger;
+                }
             }
 
             .panel-body .inner {
