--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -14,7 +14,7 @@
                     display: block;
                     background: lighten($eee, 10%);
 
-                    a {
+                    > a {
                         padding: 10px;
                         display: block;
                         font-size: 14px;
