fixing padding issue by adding else condition to _list template fn

--- a/src/sass/crn_app/_dashboard.datasets.scss
+++ b/src/sass/crn_app/_dashboard.datasets.scss
@@ -334,7 +334,7 @@
                     b,
                     strong {
                         text-transform: uppercase;
-                        color: $fuchsia;
+                        color: $c-33;
                         font-size: 10px;
                         line-height: 13px;
                     }
