--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -329,3 +329,20 @@
     }
 }
 
+.modal-open {
+    .dataset-wrap,
+    .dataset-annimation,
+    .left-sidebar .slide ul {
+        position: initial;
+        transition: all 0s;
+    }
+
+    .dataset-tools-wrap {
+        position: relative;
+    }
+
+    .snapshot .dataset-inner,
+    .dataset .dataset-inner {
+        padding-top: 0;
+    }
+}
