began building out resume diffing progress tracking

--- a/src/sass/crn_app/_nav.navbar.scss
+++ b/src/sass/crn_app/_nav.navbar.scss
@@ -111,7 +111,9 @@
                             height: 10px;
                             position: relative;
                         }
-
+                        .progress-bar-warning {
+                            background: $brand-warning;
+                        }
                     }
 
                     &:hover,
