Styling resume bar with warning color

--- a/src/sass/crn_app/_upload.upload.scss
+++ b/src/sass/crn_app/_upload.upload.scss
@@ -111,6 +111,9 @@
         }
 
         .uploadfiles-wrap {margin: 10px 0 0;}
+        .progress-bar-warning {
+            background: $brand-warning;
+        }
     }
 
     .upload-wrap {
