--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -136,72 +136,89 @@
                         line-height: 1.3;
                     }
 
-        .result-options {
-            margin-top: 10px;
-            width: 210px;
-        }
+                    .result-options {
+                        margin-top: 10px;
+                        width: 210px;
+                    }
 
-        .btn-warn-component,
-        .warning.btn-warn-component {
-            @extend %btn-admin;
-            @include border-radius(0);
-            font-size: 10px;
-            padding: 3px 5px;
-            margin: 0;
-            background: none;
-            border: 0;
-            color: $sky;
+                    .btn-warn-component,
+                    .warning.btn-warn-component {
+                        @extend %btn-admin;
+                        @include border-radius(0);
+                        font-size: 10px;
+                        padding: 3px 5px;
+                        margin: 0;
+                        background: none;
+                        border: 0;
+                        color: $sky;
 
-            i {
-                margin: 0 0 0 2px;
-                line-height: 0;
-            }
+                        i {
+                            margin: 0 0 0 2px;
+                            line-height: 0;
+                        }
 
-            &:hover,
-            &:active,
-            &.hover,
-            &.active {
-                background: $e1;
-                color: $c-66;
-                transition: all .3s ease-out;
-            }
+                        &:hover,
+                        &:active,
+                        &.hover,
+                        &.active {
+                            background: $e1;
+                            color: $c-66;
+                            transition: all .3s ease-out;
+                        }
 
-            &:focus {
-                box-shadow: none;
-                outline: none;
-            }
+                        &:focus {
+                            box-shadow: none;
+                            outline: none;
+                        }
 
-            &.cancel,
-            &.success {
-                background: $brand-danger;
-                color: $white;
-                font-size: 10px;
-                padding: 2px;
-                margin: 0 5px 0 0;
-                box-sizing: border-box;
-                line-height: 10px;
-                width: 18px;
-                height: 15px;
+                        &.cancel,
+                        &.success {
+                            background: $brand-danger;
+                            color: $white;
+                            font-size: 10px;
+                            padding: 2px;
+                            margin: 0 5px 0 0;
+                            box-sizing: border-box;
+                            line-height: 10px;
+                            width: 18px;
+                            height: 15px;
 
-                i {
-                    margin: 0;
-                    line-height: 10px;
-                }
+                            i {
+                                margin: 0;
+                                line-height: 10px;
+                            }
 
-                &:hover {
-                    background: darken($brand-danger, 10%);
-                }
-            }
+                            &:hover {
+                                background: darken($brand-danger, 10%);
+                            }
+                        }
 
-            &.success {
-                margin-right: 0;
-                background: $brand-success;
+                        &.success {
+                            margin-right: 0;
+                            background: $brand-success;
 
-                &:hover {
-                    background: darken($brand-success, 10%);
-                }
-            }
-        }
+                            &:hover {
+                                background: darken($brand-success, 10%);
+                            }
+                        }
+                    }
+                    .download-all {
+                        .btn-warn-component,
+                        .warning.btn-warn-component {
+                            font-size: 22px;
+                            margin: 0 0 15px;
+                            &.cancel,
+                            &.success {
+                                font-size: 20px;
+                                padding: 13px;
+                                margin: 0 5px 10px 0;
+                                box-sizing: border-box;
+                                line-height: 6px;
+                                width: 47px;
+                                height: 37px;
+                            }
+                        }
+                    }
 
                     .panel-body li {
                         height: auto;
