added padding to basic styling

--- a/libs/email/templates/job-complete.html
+++ b/libs/email/templates/job-complete.html
@@ -11,16 +11,19 @@
 		background: #333;
 		padding: 8px;
 	}
+	.content {
+		padding: 15px;
+	}
 	p {
 		font-size: 16px;
 	}
 </style>
 </head>
 <body>
-	<div>
-		<div class="top-bar">
-			<img src="http://reproducibility.stanford.edu/wp-content/uploads/2015/06/CRN-Logo-Placeholder1.png" />
-		</div>
+	<div class="top-bar">
+		<img src="http://reproducibility.stanford.edu/wp-content/uploads/2015/06/CRN-Logo-Placeholder1.png" />
+	</div>
+	<div class="content">
 		<h2>Hi, {{firstName}} {{lastName}}</h3>
 
 		<p>
