updated closing statement

--- a/libs/email/templates/job-complete.html
+++ b/libs/email/templates/job-complete.html
@@ -47,7 +47,7 @@
 
 		<p>
 			Sincerely,
-			CRN
+			The CRN Team
 		</p>
 
 		<a class="dataset-link" href="{{siteUrl}}/datasets/{{datasetId}}/versions/{{snapshotId}}">Go to snapshot &raquo;</a>
