Fix button spinner positioning

--- a/src/sass/crn_app/_dataset.file-tree.scss
+++ b/src/sass/crn_app/_dataset.file-tree.scss
@@ -158,6 +158,11 @@
                         width: 100%;
                         display: block;
                         margin: 5px 0 0;
+
+                        .btn-warn-load {
+                            padding: 0px;
+                            margin: 0px;
+                        }
                     }
                 }
             }
