Add ellipses animation to incomplete job status to show in progress state

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -69,6 +69,10 @@
                         background: none;
                         color: $c-9e;
                         font-size: 12px;
+
+                        .ellipsis-animation span {
+                            color: $c-9e !important;
+                        }
                     }
 
                     .meta label {
