Added multi-select tool to subject selection in job modal

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,9 @@
 @import './crn_app/variables';
 @import './crn_app/elements-wrappers';
 
+// react-select
+@import './react-select';
+
 //component common
 @import './crn_app/common.spinner';
 @import './crn_app/common.pagination';
