--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -46,6 +46,21 @@
             }
         }
 
+        .Select{
+            z-index: 1000;
+            .Select-multi-value-wrapper{
+                input{
+                    height: auto;
+                    font-size: 16px;
+                    float: none;
+                    padding: 8px;
+                    &:focus{
+                        outline: none;
+                    }
+                }
+            }
+        }
+
         input[type='checkbox'] {
 
             + label {
@@ -246,6 +261,11 @@
 
     .default-reset {
         padding: 10px;
+        text-align: right;
+
+        button{
+            color: $ocean;
+        }
     }
 
     .modal-actions {
