adding fed edits for viewing files, fixing bug with view btn in file tree, fixing bug for alert when author is not present

--- a/src/sass/crn_app/_dataset.dataset.scss
+++ b/src/sass/crn_app/_dataset.dataset.scss
@@ -43,7 +43,9 @@
                 //border-bottom:2px solid #eee;
                 .form-group {
                     margin: 0;
-
+                    .alert.alert-danger{
+                        position: relative;
+                    }
                     .cte-display {
                         border-bottom: 1px solid $eee;
                         padding: 10px;
