--- a/src/sass/crn_app/_elements-wrappers.scss
+++ b/src/sass/crn_app/_elements-wrappers.scss
@@ -449,7 +449,8 @@ h6 {
 
 .filetree-editfile {
     .delete-file,
-    .download-file {
+    .download-file,
+    .view-file {
         float: left;
         text-align: center;
         display: inline-block;
