--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -170,8 +170,8 @@
 
     .modal-dialog {
         width: 100%;
-        color: $white;
-        background: $transparent8;
+        color: $black;
+        background: transparentize($white, .2);
         height: 100%;
         padding: 70px 0 0;
 
@@ -191,17 +191,23 @@
                 right: 0;
                 bottom: 0;
                 left: 0;
-                height: 70px;
+                height: 80px;
+                background: $white;
 
                 .modal-title {
-                    color: $white;
+                    color: $black;
                     font-size: 30px;
                 }
 
                 .close {
-                    color: $white;
-                    margin-top: -10px !important;
+                    color: $transparent3;
+                    margin-top: -5px !important;
                     font-size: 50px;
+                    &:focus{
+                        border: none;
+                        outline: none;
+                        box-shadow: none;
+                    }
                 }
             }
 
