--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -182,6 +182,16 @@
             .modal-header,
             .modal-body {
                 width: 100%;
+                .modal-preview-image{
+                    width: 100%;
+                    height: auto;
+                    text-align: center;
+                    img{
+                        max-width: 100%;
+                        height: auto;
+                    }
+                }
+
             }
 
             .modal-header {
@@ -197,8 +207,14 @@
                 .modal-title {
                     color: $black;
                     font-size: 30px;
+                    .modal-download {
+                        display: inline;
+                        font-size: 18px;
+                        margin-left: 20px;
+                        position: relative;
+                        top: -3px;
+                    }
                 }
-
                 .close {
                     color: $transparent3;
                     margin-top: -5px !important;
