--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -154,17 +154,17 @@
 
 .papaya-wrap{
     margin: 0 auto;
-    width: 100%;
-    //max-width: 800px;
+    //width: 100%;
+    max-width: 800px;
     height: auto;
-    .papaya-viewer{
-        width: 100% !important;
-        height: auto !important;
-        canvas{
-        width: 100% !important;
-        height: auto !important;
-        }
-    }
+    // .papaya-viewer{
+    //     width: 100% !important;
+    //     height: auto !important;
+    //     canvas{
+    //     width: 100% !important;
+    //     height: auto !important;
+    //     }
+    // }
     .papaya-controlbar-label{
         color: $black;
     }
