adjusting the sort filter th for the file viewer

--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -382,3 +382,19 @@
 }
 
 
+.reactable-header-sortable{
+    color: $primary;
+    &:after{
+        font-family: FontAwesome;
+        content:' \f0dc';
+    }
+    &.reactable-header-sort-asc:after{
+        content:' \f0de';
+    }
+    &.reactable-header-sort-desc:after{
+        content:' \f0dd';
+    }
+}
+
+
+
